--- a/src/main/resources/explanations/challenge49_hint.adoc
+++ b/src/main/resources/explanations/challenge49_hint.adoc
@@ -1,13 +1,17 @@
 This challenge can be solved using the following ways:
 
-- *Acme Inc*. has a misconfigured docker-compose.yml file where sensitive information is exposed. Your task is to find these vulnerabilities.
+- *Acme Inc*. has a misconfigured `docker-compose.yml` file where sensitive information is exposed. Your task is to find these vulnerabilities.
+
   1. Clone the repository containing the challenge files.
   2. Locate the `challenge49docker-compose.yml` file in the repository.
-  3. Inspect the Environment Variables
-  4. Identify Hardcoded Credentials
-     Within the environment section, check for variables like:
-     - `POSTGRES_USER`
-     - `POSTGRES_PASSWORD`
-     - `POSTGRES_DB`
-  5. Extract the Database Password
+  3. Inspect the environment variables.
+  4. Identify hardcoded credentials:
+    Within the environment section, check for variables like:
+
+     * `POSTGRES_USER`
+     * `POSTGRES_PASSWORD`
+     * `POSTGRES_DB`
+
+  5. Extract the database password:
+
      - The value assigned to `POSTGRES_PASSWORD` is the database password.
