--- a/src/main/resources/explanations/challenge50_hint.adoc
+++ b/src/main/resources/explanations/challenge50_hint.adoc
@@ -3,6 +3,10 @@ This challenge is specifically looking at a secret in a .NET8 binary
 You can solve this challenge using the following alternative solutions:
 
 1. Find the secrets with Ilsply.
+- obtain the wrongsecrets-dotnet-<platform> binary, for this you can:
+   - retreive it from the Docker image
+   - get it using git lfs (see https://github.com/OWASP/wrongsecrets/blob/fbe9dbc7494acca795c724dff1b1308bb0187cd0/CONTRIBUTING.md#optionally-use-git-lfs[CONTRIBUTING])
+   - download it from the https://github.com/OWASP/wrongsecrets-binaries/releases[Wrongsecrets Binaries]
 - Install .NET8 and .NET8 SDK
 - Install https://github.com/icsharpcode/ILSpy/tree/master/ICSharpCode.ILSpyCmd[ilspycmd]
 - Install `sfextract`: `dotnet tool install -g sfextract`
